fixed play button clipping

--- a/Styles/Common.css
+++ b/Styles/Common.css
@@ -61,9 +61,10 @@ a:hover
 	display: grid;
 	grid-template-areas:
 		"gameIcon gameTitle playButton";
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: 1fr 3fr 1fr;
 	
 	border : 3px solid red;
+	border-radius : 3px;
 	margin : 10px;
 	height : 110px;
 }
@@ -82,7 +83,7 @@ a:hover
 {
 	font-family : "LinkFont";
 	margin-top : 40px;
-	margin-left: 300px;
+	float : right;
 }
 .gameDesc
 {
